+ saving user info(partial)

--- a/views/acc.handlebars
+++ b/views/acc.handlebars
@@ -7,7 +7,7 @@
     </div>
     <div id="views">
         <div {{#if summary}}id="active"{{/if}}>
-            <h2>Welcome {{userName}} to Amazon!!</h2>
+            <h2>Welcome {{user.name}} to Amazon!!</h2>
         </div>
         <div {{#if orders}}id="active"{{/if}}>
             <p>No Orders...</p>
