--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -4,11 +4,11 @@
         <form action="/logIn" method="POST">
             <lable for="email">Email</lable><br>
             <input type="text" id="email" name="email" {{#if emailErr}}class="errBox"{{/if}}><br>
-            {{#if emailErr}}<lable for="email" class="errMess"><i class="fas fa-exclamation-circle"></i>Enter your Email</lable>{{/if}}
+            {{#if emailErr}}<lable for="email" class="errMess"><i class="fas fa-exclamation-circle"></i>{{emailErr}}</lable>{{/if}}
             <br>
             <lable for="password">Password</lable><br>
             <input type="password" id="password" name="password" {{#if passErr}} class="errBox" {{/if}}><br>
-            {{#if passErr}}<lable for="password" class="errMess"><i class="fas fa-exclamation-circle"></i>Enter your Password</lable>{{/if}}
+            {{#if passErr}}<lable for="password" class="errMess"><i class="fas fa-exclamation-circle"></i>{{passErr}}</lable>{{/if}}
             <br>
             <input type="submit" value="Log In">
         </form>
