--- a/views/acc.handlebars
+++ b/views/acc.handlebars
@@ -3,12 +3,13 @@
         <ul>
             <li><a href="/accHome">Home</a></li>
             <li><a href="/accOrd">Orders</a></li>
+            <li><a href="/logout">Logout</a></li>
         </ul>
     </div>
     <div id="views">
         <div {{#if summary}}id="active"{{/if}}>
             {{!-- <h2>Welcome {{user.name}} to Amazon!!</h2> --}}
-            <h2>Welcome {{name}} to Amazon!!</h2>
+            <h2>Welcome {{user.name}} to Amazon!!</h2>
         </div>
         <div {{#if orders}}id="active"{{/if}}>
             <p>No Orders...</p>
