+ adding prods as clerk and using DB prods

--- a/views/acc.handlebars
+++ b/views/acc.handlebars
@@ -3,6 +3,7 @@
         <ul>
             <li><a href="/accHome">Home</a></li>
             <li><a href="/accOrd">Orders</a></li>
+            {{#if user.ic}}<li><a href="/addProd">Add Product</a></li>{{/if}}
             <li><a href="/logout">Logout</a></li>
         </ul>
     </div>
