--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -9,7 +9,7 @@
     <section id="productList">
         {{#each products}}
             <div>
-                <img src="{{this.img}}" alt="Category Image">
+                <img src={{this.img}} alt="Product Image">
                 <div>
                     <p>{{this.name}}</p>
                     <p>CAN$ {{this.price}}</p>
