--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,7 +95,7 @@ main a, main input[type=submit] {
     margin: .5rem .25rem;
 }
 
-#cats, #homeBSTitle, #promo {
+#cats, #homeBSTitle, #promo, #topSold {
     text-align: center;
 }
 
@@ -136,7 +136,7 @@ main a, main input[type=submit] {
     margin: .5rem .25rem;
 }
 
-#loginForm, #createForm {
+#loginForm, #createForm, #addProdForm {
     max-width: 25rem;
     margin: 0 auto;
     padding: 1rem;
@@ -144,7 +144,7 @@ main a, main input[type=submit] {
     text-align: center;
 }
 
-#loginForm > form, #createForm > form {
+#loginForm > form, #createForm > form, #addProdForm > form {
     padding: 1rem;
     margin: 2rem 1rem;
     box-shadow: 0px 5px 10px #00797e;
@@ -153,19 +153,24 @@ main a, main input[type=submit] {
     background-color: #dbdbdb;
 }
 
-#loginForm input[type=text], #createForm input[type=text], #loginForm input[type=password], #createForm input[type=password] {
+#loginForm input[type=text], #loginForm input[type=password],
+#createForm input[type=text], #createForm input[type=password],
+#addProdForm input[type=text], #addProdForm input[type=number],
+#addProdForm textarea, #addProdForm select  {
     width: 90%;
+    max-width: 90%;
+    min-width: 90%;
     padding: 10px 5%;
     margin: .5rem 0 0 0;
 
     border-radius: 5px;
 }
 
-#loginForm input[type=submit], #createForm input[type=submit] {
+#loginForm input[type=submit], #createForm input[type=submit], #addProdForm input[type=submit] {
     font-family: 'Merriweather', serif;
 }
 
-#loginForm input[type=submit]:hover, #createForm input[type=submit]:hover {
+#loginForm input[type=submit]:hover, #createForm input[type=submit]:hover, #addProdForm input[type=submit]:hover {
     cursor: pointer;
 }
 
