--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,7 @@
             <a href="/"><img src="/img/logo.png"></a>
             <nav>
                 <ul>
-                    <li><a href="/products">Products</a></li>
+                    <li><a href="/products/all">Products</a></li>
                     {{#if user}}
                         <li><a href="/accHome">Profile</a></li>
                     {{else}}
